# Satyum

./: .dockerignore  .gitignore  CLAUDE.md  DEMO.md  DEPLOY.md  DESIGN.md  KNOWN_ISSUES.md  PITCH-SCRIPT.md  PROBLEM STATEMENT SuRaksha.txt  README.md  RESULTS.md  docker-compose.yml  hackathon_submission.md  railway.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  test_pipeline.py  test_qwen.py
backend/anomaly/: __init__.py  analyzer.py  backbone.py  interface.py
backend/app/: __main__.py  bundle.py  case_store.py  claims.py  config.py  contracts.py  main.py  orchestrator.py  registry.py  registry_assembly.py  session.py
backend/capture/: antispoof.py  challenge.py  rectify.py
backend/federation/: __init__.py  graph.py  registry.py  service.py  tokens.py
backend/forensics/: arithmetic.py  claimed_identity.py  copy_move.py  cross_document.py  entities.py  layout.py  metadata.py  ocr.py  pdf_fonts.py  phash.py  template.py
backend/intake/: __init__.py  sufficiency.py
backend/interpretability/: __init__.py  contracts.py  copilot.py  fallback.py  firewall.py  mcp_client.py  narrator.py  prompts.py  tools.py
backend/ontology/: README.md  __init__.py  _shared.json  financial.json  land_title.json  legal_contract.json  loader.py
backend/providers/: __init__.py  aadhaar.py  account_aggregator.py  contracts.py  digilocker.py  pan.py  registry.py  service.py
backend/risk/: audit.py  engine.py  evidence.py
backend/rule_mining/: __init__.py  analyzer.py  miner.py  model.py  store.py
backend/rules/: __init__.py  (+12 more)
(+210 files in other folders)
